Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74748

When using multiple different Arial based fonts, it can end up picking up the wrong one when rendering

XMLWordPrintable

    • bcd2fa484a4fe93e77743195d7f72cce9e580d43 (reverted), 922d195020d54d7e599d135f6a5e0338100e08f1

      When using multiple different Arial based fonts, it can end up picking up the wrong one when rendering. For example, if Arial Black, Arial and Arial Narrow is used to render on the same painter then it is possible that it will use one of those fonts instead of the specified one for drawing text. In one case it will use Arial Black for the top line and Arial Narrow for the other lines despite one of them explicitly using Arial.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes