src/gui/text/qfontdatabase.cpp
@@ -804,6 +804,13 @@ QString qt_resolveFontFamilyAlias(const QString &alias)
     return alias;
 }
 
+bool qt_isFontFamilyPopulated(const QString &familyName)
+{
+    QFontDatabasePrivate *d = privateDb();
+    QtFontFamily *f = d->family(familyName, QFontDatabasePrivate::RequestFamily);
+    return f != nullptr && f->populated;
+}
+
 /*!
     Returns a list of alternative fonts for the specified \a family and
     \a style and \a script using the \a styleHint given.
